--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,20 +1,11 @@
 @use "sass:math";
 
-@import "../node_modules/@wordpress/base-styles/animations";
-@import "../node_modules/@wordpress/base-styles/breakpoints";
-@import "../node_modules/@wordpress/base-styles/colors";
-@import "../node_modules/@wordpress/base-styles/mixins";
-@import "../node_modules/@wordpress/base-styles/default-custom-properties";
-@import "../node_modules/@wordpress/base-styles/variables";
-@import "../node_modules/@wordpress/base-styles/z-index";
-
-
-@import "../node_modules/@wordpress/components/src/style.scss";
-@import "../node_modules/@wordpress/block-editor/src/style.scss";
-@import "../node_modules/@wordpress/block-library/src/style.scss";
-@import "../node_modules/@wordpress/block-library/src/theme.scss";
-@import "../node_modules/@wordpress/block-library/src/editor.scss";
-@import "../node_modules/@wordpress/format-library/src/style.scss";
+// Import pre-built WordPress CSS files
+@import "../node_modules/@wordpress/components/build-style/style.css";
+@import "../node_modules/@wordpress/block-editor/build-style/style.css";
+@import "../node_modules/@wordpress/block-library/build-style/style.css";
+@import "../node_modules/@wordpress/block-library/build-style/theme.css";
+@import "../node_modules/@wordpress/format-library/build-style/style.css";
 
 $sidebar-width: 300px;
 $border-color: #e0e0e0;
@@ -54,6 +45,21 @@ $test: 1;
         flex: 1;
         padding: 1rem;
         overflow-y: auto;
+        display: flex;
+        gap: 1rem;
+    }
+
+    .block-editor__list-view-panel {
+        width: 250px;
+        border-right: 1px solid $border-color;
+        padding: 1rem;
+        overflow-y: auto;
+        background: #fff;
+    }
+
+    .editor-styles-wrapper {
+        flex: 1;
+        min-width: 0;
     }
 
     .block-editor__sidebar {
