--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,6 +20,17 @@ $test: 1;
     position: relative;
     border: solid 1px $border-color;
     border-radius: 2px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+
+    // React 18 StrictMode and providers may add wrapper divs
+    > div {
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+        min-height: 0;
+    }
 
     input, textarea {
         box-sizing: border-box;
@@ -28,6 +39,9 @@ $test: 1;
     .block-editor {
         display: flex;
         flex-direction: column;
+        height: 100%;
+        flex: 1;
+        min-height: 0;
     }
 
     .block-editor__header {
@@ -36,6 +50,7 @@ $test: 1;
         justify-content: space-between;
         padding: .5rem;
         border-bottom: solid 1px $border-color;
+        flex-shrink: 0;
     }
 
     .block-editor__header-toolbar {
@@ -44,6 +59,8 @@ $test: 1;
 
     .block-editor__content {
         display: flex;
+        flex: 1;
+        min-height: 0;
     }
 
     .block-editor__editor {
@@ -52,6 +69,13 @@ $test: 1;
         display: flex;
         gap: 0;
         position: relative;
+        min-height: 0;
+
+        // Target the BlockCanvas wrapper div that has inline height/display styles
+        > div[style*="height"] {
+            flex: 1;
+            min-width: 0;
+        }
     }
 
     .block-editor__list-view-panel {
