--- a/src/styles.scss
+++ b/src/styles.scss
@@ -101,11 +101,18 @@ $test: 1;
     // Unified left sidebar for inserter and list view
     .block-editor__left-sidebar {
         flex: 0 0 350px;
+        width: 350px;
+        margin-left: -350px;
         border-right: 1px solid $border-color;
         background: #fff;
         display: flex;
         flex-direction: column;
         overflow: hidden;
+        transition: margin-left 0.2s ease;
+
+        &.is-open {
+            margin-left: 0;
+        }
 
         // Ensure tabbed-sidebar fills the space
         .block-editor-tabbed-sidebar {
