--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,9 @@
 @import "../node_modules/@wordpress/block-library/build-style/editor.css";
 @import "../node_modules/@wordpress/format-library/build-style/style.css";
 
+// Import our content overrides (loaded into iframe)
+@import "./content-overrides.css";
+
 $sidebar-width: 300px;
 $border-color: #e0e0e0;
 $test: 1;
@@ -229,6 +232,8 @@ $test: 1;
     .block-editor__bottom-appender {
         display: flex;
         justify-content: center;
+        padding-top: 28px;
+        padding-bottom: 28px;
     }
 
     .block-editor__bottom-appender-button {
